# routes/index.js
@@ -4,6 +4,6 @@ router.get('/', (req, res) => (res.send("Hello World")));
 
 router.use('/', require('./swagger'));
 router.use('/games', require('./video-games'));
-
+router.use('/user', require('./user'));
 
 module.exports = router;
